--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vanilla ES6 • TodoMVC</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div id="root">
       <!-- <section class="todoapp"> -->
-        <!-- <header class="header">
+      <!-- <header class="header">
           <h1>todos</h1>
           <input class="new-todo" placeholder="What needs to be done?" autofocus>
         </header> -->
-        <!-- <section class="main">
+      <!-- <section class="main">
           <ul class="todo-list">
             <li class="completed">
               <div class="view">
